# template_python

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/: __init__.py  __main__.py  main.py  make-mat.py  streamlit-app.py
